tests/fixtures/invalid/pow_none_dict_list.py
# Cannot call pow() with None, Dict[str, int], List[int]
x = pow(None, {"a": 1}, [1, 2, 3])
